--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2018"
 
 [dependencies]
 amethyst = "0.15.0"
+amethyst_gltf = "0.10.0"
+serde = "1.0.105"
 
 [features]
 default = ["vulkan"]
